# tortools

./: .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  setup.sh
.github/workflows/: ci.yml
scripts/: dev.sh
tests/: conftest.py  test_mechanics.py
tortools/: __init__.py  cli.py  mechanics.py
