[tool.poetry]
name = "tortools"
version = "0.1.0"
description = "Command-line tools for The One Ring RPG game masters"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "tortools"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
rich = "^13.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
mypy = "^1.5.1"
pre-commit = "^3.6.0"

[tool.poetry.scripts]
tortools = "tortools.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3
